@@ -1,0 +1,2 @@
+IDLE: Cleanup codecontext.py and its test.
+
